fix direction mobile size

--- a/css/style.css
+++ b/css/style.css
@@ -1908,7 +1908,7 @@ form label {
 @media screen and (max-width: 768px) {
  #fh5co-direction {
     font-size:16px;
-    height:400px;
+    height:500px;
   }
  #fh5co-direction h3{
  font-size: 20px;
